# tgtools

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
.github/workflows/: pythonapp.yml
boorutools/api/: __init__.py  danbooru.py
boorutools/models/: base.py  danbooru.py  file_summary.py
boorutools/telegram/compatibility/: __init__.py  base.py  document.py  gif.py  image.py
tgtools/: constants.py
tgtools/api/: __init__.py  booru_api.py  danbooru.py  yandere.py
tgtools/api/booru/: __init__.py  base.py  danbooru.py  gelbooru.py  v1.py  yandere.py
tgtools/models/: __init__.py  booru_post.py  danbooru.py  danbooru_post.py  file_summary.py  yandere_post.py
tgtools/models/booru/: __init__.py  base.py  common.py  danbooru.py  gelbooru.py  rating.py  threedbooru.py  yandere.py
tgtools/models/summaries/: __init__.py  downloadable.py  file_summary.py  to_download.py
tgtools/telegram/: text.py
tgtools/telegram/compatibility/: __init__.py  base.py  document.py  gif.py  image.py  video.py
tgtools/utils/: file.py  misc.py  types.py
tgtools/utils/urls/: builder.py  emoji.py
