[tool.poetry]
name = "tgtools"
version = "0.1.0"
description = ""
authors = ["Nachtalb <na@nachtalb.io>"]
license = "LGPL-3.0"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
pydantic = "^1.10.7"
aiohttp = {extras = ["speedups"], version = "^3.8.4"}
aiopath = "^0.6.11"
pillow = "^9.5.0"
emoji = "^2.2.0"


[tool.poetry.group.dev.dependencies]
ipdb = "^0.13.13"
ipython = {extras = ["black"], version = "^8.12.0"}

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
